# AetherEngine

./: .clang-format  .clang-tidy  .clangd  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  justfile
.github/: GitPatch.cmake
.github/prompts/: copyright.prompt.md
cmake/: Config.cmake  Dependencies.cmake  configs.cmake
cmake/configs/: compilation.cmake  extern.cmake  options.cmake  paths.cmake  runtimes.cmake
cmake/helpers/: CompileCommandsSymlink.cmake  CompilerWarnings.cmake  Doctest.cmake  Git.cmake  LibjpegTurbo.cmake  PythonRuntime.cmake  UvRuntime.cmake
cmake/modules/: FindGitHub.cmake  FindUv.cmake  FindVulkan.cmake  FindYasm.cmake  GitHubConfig.cmake  GitHubHelpers.cmake  UvConfig.cmake  UvConfigVersion.cmake  UvHelpers.cmake  VulkanConfig.cmake  VulkanConfigVersion.cmake  VulkanShaders.cmake
configs/: submodules.toml
configs/dev/: .vsconfig-2026
configs/runtimes/uv/: uv.toml.in
examples/: CMakeLists.txt
examples/tutorials/: CMakeLists.txt
examples/tutorials/khronos_vulkan_tutorial/: CMakeLists.txt
scripts/just/: clean.just  dev-windows-bootstrap.just  git.just  tools.just
